day-5-hotstar-ingress/path1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotstar-deployment
  labels:
    app: hotstar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotstar
  template:
    metadata:
      labels:
        app: hotstar
    spec:
      containers:
      - name: hotstar-container
        image: 211125314839.dkr.ecr.us-east-1.amazonaws.com/hotstar:latest
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: hotstar-service
  labels:
    app: hotstar
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: hotstar
