day-5-hotstar-ingress/path2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
      - name: swiggy
        image: 211125314839.dkr.ecr.us-east-1.amazonaws.com/swiggy
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: swiggy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: swiggy
