day-5-hotstar-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotstar-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: hotstar
  rules:
  - http:
      paths:
      - path: /hotstar
        pathType: Prefix
        backend:
          service:
            name: hotstar
            port:
              number: 80
      - path: /swiggy
        pathType: Prefix
        backend:
          service:
            name: swiggy
            port:
              number: 80
